<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/framefragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@drawable/shadow_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/btkasus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">
            <ImageView
                android:id="@+id/ikasus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/kasus_on" />

            <TextView
                android:id="@+id/tkasus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/kasus"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="11dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btinformasi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">
            <ImageView
                android:id="@+id/iinformasi"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/informasi" />

            <TextView
                android:id="@+id/tinformasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/informasi"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="11dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btbantuan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">
            <ImageView
                android:id="@+id/ibantuan"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/bantuan" />

            <TextView
                android:id="@+id/tbantuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/bantuan"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="11dp" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>