<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kasus.KasusFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/line01"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/pickasus"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:background="@drawable/shape_white"
                android:orientation="vertical"
                android:weightSum="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/btsearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape_point"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:src="@drawable/icpointmap" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtnamaKota"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:text="@string/defaultkota"
                            android:textColor="@color/colorBlack"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="right"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_arrow_down" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/updatekasus"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtupdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:gravity="left"
                            android:fontFamily="sans-serif"
                            android:text="@string/update"
                            android:textColor="@color/colorGrey"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtdetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif"
                            android:gravity="right"
                            android:text="@string/lihatdetail"
                            android:textColor="@color/colorGreen"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape_white_rtx"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tinformasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="1025"
                            android:textAlignment="center"
                            android:textColor="#FF9E6B"
                            android:textSize="40dp" />

                        <TextView
                            android:id="@+id/tinformasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/positif"
                            android:textAlignment="center"
                            android:textColor="@color/colorGrey"
                            android:textSize="14dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tinformasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="70"
                            android:textAlignment="center"
                            android:textColor="#67C57B"
                            android:textSize="40dp" />

                        <TextView
                            android:id="@+id/tinformasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/sembuh"
                            android:textAlignment="center"
                            android:textColor="@color/colorGrey"
                            android:textSize="14dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tinformasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="20"
                            android:textAlignment="center"
                            android:textColor="#E36172"
                            android:textSize="40dp" />

                        <TextView
                            android:id="@+id/tinformasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/meninggal"
                            android:textAlignment="center"
                            android:textColor="@color/colorGrey"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sebaran"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape_white_rtx"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="75dp"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="138dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="75dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logolawan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/line01" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>